--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,9 +7,14 @@ vars:
 tasks:
   all:
     cmds:
-      - task: clean
       - task: build:debug
       - task: publish
+  test:
+    cmds:
+      - cargo test --target=x86_64-unknown-linux-musl
+  check:
+    cmds:
+      - cargo check --target=x86_64-unknown-linux-musl
   build:debug:
     cmds:
       - cargo build --target=x86_64-unknown-linux-musl
