--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.0", features = ["derive"] }
 polling = { version = "2.2.0"}
-#tokio-seqpacket = "0.5.4"
+tokio-seqpacket = "0.5.4"
 tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
 serde_json = "1.0"
 serde = {version= "1.0.134", features=["derive"]}
