--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.0", features = ["derive"] }
-polling = { version = "2.2.0"}
 tokio-seqpacket = "0.5.4"
-tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
+tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
 serde_json = "1.0"
+rand = "0.8.5"
 serde = {version= "1.0.134", features=["derive"]}
-serde_test = {version="1.0.134"}
