--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.0", features = ["derive"] }
+clap = { version = "4.0", features = ["derive"] }
 tokio-seqpacket = "0.5.4"
-tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
+tokio = { version = "1", features = ["full"] }
 serde_json = "1.0"
 futures = "0.3.21"
 rand = "0.8.5"
-serde = {version= "1.0.134", features=["derive"]}
+serde = { version = "1.0.134", features = ["derive"] }
+
+crossbeam-channel = "0.5.1"
+crossbeam = "0.8.0"
+timer = "0.1.3"
+time = "0.1.39"
